more work done on app

--- a/Views/create.ejs
+++ b/Views/create.ejs
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 <body>
-http://localhost:3000/<%= hash%>
+
+<a href="<%= hashed%>">Your Shortened Link</a>
 </body>
 </html>
